fixed spacing

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -51,7 +51,7 @@
     }
 
     .business-cards{
-        margin-top: -125px;
+        margin-top: -240px;
         margin-left: 650px;
     }
     
